api-gateway/api-gateway-ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
    nginx.ingress.kubernetes.io/auth-url: auth-service/token
    nginx.ingress.kubernetes.io/auth-method: GET
    nginx.ingress.kubernetes.io/auth-request-redirect: http://kubernetes-auth.io/auth/login
spec:
  rules:
    - host: kubernetes-auth.io
      http:
        paths:
          - path: /auth(/|$)(.*)
            backend:
              serviceName: auth-service
              servicePort: 80
          - path: /files(/|$)(.*)
            backend:
              serviceName: file-service
              servicePort: 3000
